<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:aapt="http://schemas.android.com/aapt"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        style="@style/BottomSheetMainLL"
        android:tag="layout/bottomsheet_properties_0">

        <androidx.cardview.widget.CardView style="@style/BottomSheetMainCard">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingRight="20dp"
                android:paddingLeft="20dp">

                <LinearLayout
                    style="@style/BottomSheetDividerLL"
                    android:layout_gravity="center_horizontal">

                    <androidx.cardview.widget.CardView style="@style/BottomSheetDividerCard" />
                </LinearLayout>

                <TextView
                    style="@style/BottomSheetText"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginVertical="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:gravity="center"
                    android:text="@string/properties" />

                <LinearLayout
                    style="@style/BottomItemLL"
                    android:paddingVertical="@dimen/_3sdp"
                    android:paddingTop="@dimen/_3sdp"
                    android:paddingBottom="@dimen/_3sdp">

                    <TextView
                        style="@style/PropertiesText"
                        android:layout_weight="1"
                        android:text="@string/file" />

                    <TextView
                        android:id="@+id/txtFileName"
                        style="@style/PropertiesText"
                        android:layout_weight="2" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llAlbum"
                    style="@style/BottomItemLL"
                    android:paddingVertical="@dimen/_3sdp"
                    android:paddingTop="@dimen/_3sdp"
                    android:paddingBottom="@dimen/_3sdp">

                    <TextView
                        style="@style/PropertiesText"
                        android:layout_weight="1"
                        android:text="@string/album" />

                    <TextView
                        android:id="@+id/txtAlbumName"
                        style="@style/PropertiesText"
                        android:layout_weight="2" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llArtist"
                    style="@style/BottomItemLL"
                    android:paddingVertical="@dimen/_3sdp"
                    android:paddingTop="@dimen/_3sdp"
                    android:paddingBottom="@dimen/_3sdp">

                    <TextView
                        style="@style/PropertiesText"
                        android:layout_weight="1"
                        android:text="@string/artist" />

                    <TextView
                        android:id="@+id/txtArtistName"
                        style="@style/PropertiesText"
                        android:layout_weight="2" />
                </LinearLayout>

                <LinearLayout
                    style="@style/BottomItemLL"
                    android:paddingVertical="@dimen/_3sdp"
                    android:paddingTop="@dimen/_3sdp"
                    android:paddingBottom="@dimen/_3sdp">

                    <TextView
                        style="@style/PropertiesText"
                        android:layout_weight="1"
                        android:text="@string/location" />

                    <TextView
                        android:id="@+id/txtLocation"
                        style="@style/PropertiesText"
                        android:layout_weight="2" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llsize"
                    style="@style/BottomItemLL"
                    android:paddingVertical="@dimen/_3sdp"
                    android:paddingTop="@dimen/_3sdp"
                    android:paddingBottom="@dimen/_3sdp">

                    <TextView
                        style="@style/PropertiesText"
                        android:layout_weight="1"
                        android:text="@string/size" />

                    <TextView
                        android:id="@+id/txtSize"
                        style="@style/PropertiesText"
                        android:layout_weight="2" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llformat"
                    style="@style/BottomItemLL"
                    android:paddingVertical="@dimen/_3sdp"
                    android:paddingTop="@dimen/_3sdp"
                    android:paddingBottom="@dimen/_3sdp">

                    <TextView
                        style="@style/PropertiesText"
                        android:layout_weight="1"
                        android:text="@string/format" />

                    <TextView
                        android:id="@+id/txtFormat"
                        style="@style/PropertiesText"
                        android:layout_weight="2" />
                </LinearLayout>

                <LinearLayout
                    style="@style/BottomItemLL"
                    android:paddingVertical="@dimen/_3sdp"
                    android:paddingTop="@dimen/_3sdp"
                    android:paddingBottom="@dimen/_3sdp">

                    <TextView
                        style="@style/PropertiesText"
                        android:layout_weight="1"
                        android:text="@string/length" />

                    <TextView
                        android:id="@+id/txtLength"
                        style="@style/PropertiesText"
                        android:layout_weight="2" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="10dp"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</layout>
